objects/Customer_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_of_commissioning__c</fullName>
        <inlineHelpText>Date from which the customer asset is taken from commissioning phase into event-monitoring phase.</inlineHelpText>
        <label>End of commissioning</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_event_monitoring__c</fullName>
        <inlineHelpText>Date from which the customer asset is not ascribed to event-monitoring phase.</inlineHelpText>
        <label>End of event-monitoring</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_External__c</fullName>
        <label>Evaluation External</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <color>#33FF33</color>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                    <color>#FFCC66</color>
                    <label>Warning</label>
                </value>
                <value>
                    <fullName>Alarm</fullName>
                    <color>#FF0000</color>
                    <label>Alarm</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Internal__c</fullName>
        <label>Evaluation Internal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <color>#33FF33</color>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                    <color>#FFCC66</color>
                    <label>Warning</label>
                </value>
                <value>
                    <fullName>Alarm</fullName>
                    <color>#FF0000</color>
                    <label>Alarm</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gearbox_Acceleration_Status__c</fullName>
        <formula>IF(  Gearbox_Acceleration_Value__c  &lt; 7.5, &quot;Green&quot;,
IF( AND(  Gearbox_Acceleration_Value__c &gt;= 7.5 ,  Gearbox_Acceleration_Value__c &lt;= 12), &quot;Yellow&quot;,
IF(  Gearbox_Acceleration_Value__c &gt; 12, &quot;Red&quot;, null
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gearbox Acceleration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gearbox_Acceleration_Value__c</fullName>
        <inlineHelpText>Good: 0 - 7,5 m/s^2
Warning: 7,5 - 12 m/s^2
Alarm: &gt;12 m/s^2
Range: &lt;= 0,1 - 10 Hz</inlineHelpText>
        <label>Gearbox Acceleration Value</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gearbox_Velocity_Status__c</fullName>
        <formula>IF(  Gearbox_Velocity_Value__c  &lt; 3.5, &quot;Green&quot;, 
	IF( AND(Gearbox_Velocity_Value__c  &gt;= 3.5, Gearbox_Velocity_Value__c &lt; 5.6), &quot;Yellow&quot;, 
		IF(Gearbox_Velocity_Value__c  &gt;= 5.6, &quot;Red&quot;, null
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gearbox Velocity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gearbox_Velocity_Value__c</fullName>
        <inlineHelpText>Good: 0 - 3,49 mm/s
Warning: 3,5 - 5,6 mm/s
Alarm: &gt;= 5,6 mm/s
Range 10 - 1000 Hz</inlineHelpText>
        <label>Gearbox Velocity Value</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generator_Acceleration_Status__c</fullName>
        <formula>IF (Generator_Acceleration_Value__c &lt; 10, &quot;Green&quot;, 
	IF( AND( Generator_Acceleration_Value__c &gt;= 10, Generator_Acceleration_Value__c &lt; 16), &quot;Yellow&quot;, 
		IF( Generator_Acceleration_Value__c &gt;= 16, &quot;Red&quot;, null
		)
	)
)</formula>
        <label>Generator Acceleration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generator_Acceleration_Value__c</fullName>
        <inlineHelpText>Good: 0 - 9,99 m/s^2
Warning:  10 - 15,99 m/s^2
Alarm: &gt;= 16 m/s^2
Range: &lt;= 10 - 2000 Hz</inlineHelpText>
        <label>Generator Acceleration Value</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generator_Velocity_Status__c</fullName>
        <formula>IF(  Generator_Velocity_Value__c  &lt; 6, &quot;Green&quot;, 
	IF( AND( Generator_Velocity_Value__c  &gt;= 6, Generator_Velocity_Value__c  &lt; 10), &quot;Yellow&quot;, 
		IF( Generator_Velocity_Value__c  &gt;= 10, &quot;Red&quot;, null
		)
	)
)</formula>
        <label>Generator Velocity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generator_Velocity_Value__c</fullName>
        <inlineHelpText>Good: 0 - 5,99 mm/s
Warning: 6 - 9,99 mm/s
Alarm: 10 mm/s
Range 10 - 1000 Hz</inlineHelpText>
        <label>Generator Velocity Value</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Machine_Code__c</fullName>
        <formula>Machine_Machine_Component__r.Machine_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field reads value from Machine. To edit its value open Machine record.</inlineHelpText>
        <label>Machine Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Machine_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Machine / Machine Component</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Machine_Type_DE__c</fullName>
        <formula>Machine_Machine_Component__r.Type_DE__c</formula>
        <label>Machine Type_DE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Type_EN__c</fullName>
        <formula>Text(Machine_Machine_Component__r.Type_EN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field reads value from Machine. To edit its value open Machine record.</inlineHelpText>
        <label>Machine Type_EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Bearing_A1__c</fullName>
        <label>Main Bearing (A1)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Bearing_Velocity_Status__c</fullName>
        <formula>IF( Main_Bearing_Velocity_Value__c &lt; 2, &quot;Green&quot;, 
	IF( AND( Main_Bearing_Velocity_Value__c &gt;= 2, Main_Bearing_Velocity_Value__c &lt; 3.2), &quot;Yellow&quot;, 
		IF( Main_Bearing_Velocity_Value__c &gt;= 3.2, &quot;Red&quot;, null
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Bearing Velocity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Bearing_Velocity_Value__c</fullName>
        <inlineHelpText>Good: 0 - 1,99 mm/s
Warning: 2,0 - 3,19 mm/s
Alarm: 3,2 mm/s
Range 10 - 1000 Hz</inlineHelpText>
        <label>Main Bearing Velocity Value</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Bearing_acceleration_status__c</fullName>
        <formula>IF(  Main_Bearing_acceleration_value__c  &lt; 0.3, &quot;Green&quot;, 
	IF( AND( Main_Bearing_acceleration_value__c  &gt;= 0.3 , Main_Bearing_acceleration_value__c  &lt; 0.5), &quot;Yellow&quot;, 
		IF( Main_Bearing_acceleration_value__c  &gt;= 0.5, &quot;Red&quot;, null
		)
	)
)</formula>
        <label>Main Bearing Acceleration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Bearing_acceleration_value__c</fullName>
        <inlineHelpText>Good: 0 - 0,3 m/s^2
Warning: 0,3 - 0,49 m/s^2
Alarm: &gt;0,5 m/s^2
Range: &lt;= 0,1 - 10 Hz</inlineHelpText>
        <label>Main Bearing Acceleration Value</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTAG_Account_Address__c</fullName>
        <formula>Account__r.BillingStreet &amp; &quot;, &quot; &amp;  Account__r.BillingPostalCode &amp; &quot; &quot; &amp;  Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTAG_Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTAG_Machine_Manufaturer__c</fullName>
        <formula>Machine_Machine_Component__r.Manufacturer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field reads value from Machine. To edit its value open Machine record.</inlineHelpText>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTAG_contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Customer_Asset_ID__c</fullName>
        <formula>Parent_Customer_Asset__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Customer Asset ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Customer_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Customer Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>By default only records with Status = Active are shown.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>Sub Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Period__c</fullName>
        <formula>TEXT(MONTH(TODAY() - 93 ))
&amp; &quot;-&quot;
&amp; TEXT(YEAR(TODAY() -93 ))
&amp; &quot; - &quot;
&amp; TEXT(MONTH( TODAY() -32 ))
&amp;&quot;-&quot;
&amp; TEXT(YEAR( TODAY() -32 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDIC_QR_NX_DE__c</fullName>
        <formula>&quot;&amp;TemplateId=a0xD0000002E6XG&quot; +  Turbine_Report_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDIC_QR_NX_DE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDIC_QR_NX_EN__c</fullName>
        <formula>&quot;&amp;TemplateId=a0xD0000002E6X6&quot; +  Turbine_Report_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDIC_QR_NX_EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDIC_QR_PT_DE__c</fullName>
        <formula>&quot;&amp;TemplateId=a0xD0000002E6Wm&quot; +  Turbine_Report_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDIC_QR_PT_DE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDIC_QR_PT_EN__c</fullName>
        <formula>&quot;&amp;TemplateId=a0xD0000002E6Wr&quot; +  Turbine_Report_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDIC_QR_PT_EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Nurmber__c</fullName>
        <label>Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tower_Acceleration_Status__c</fullName>
        <formula>IF(  Tower_Acceleration_Value__c  &lt; 0.3, &quot;Green&quot;, 
	IF( AND( Tower_Acceleration_Value__c &gt;= 0.3, Tower_Acceleration_Value__c &lt; 0.5), &quot;Yellow&quot;, 
		IF( Tower_Acceleration_Value__c &gt;= 0.5, &quot;Red&quot;, null
		)
	)
)</formula>
        <label>Tower Acceleration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tower_Acceleration_Value__c</fullName>
        <inlineHelpText>Good: 0 - 0,29 m/s^2
Warning: 0,3 - 0,49 m/s^2
Alarm: &gt;0,5 m/s^2
Range: &lt;= 0,1 - 10 Hz</inlineHelpText>
        <label>Tower Acceleration Value</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower_Type__c</fullName>
        <formula>Machine_Machine_Component__r.Tower_Type__c</formula>
        <label>Tower Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tower_Velocity_Status__c</fullName>
        <formula>IF(  Tower_Velocity_Value__c  &lt; 60, &quot;Green&quot;, 
	IF( AND( Tower_Velocity_Value__c &gt;= 60, Tower_Velocity_Value__c &lt; 100), &quot;Yellow&quot;, 
		IF( Tower_Velocity_Value__c &gt;= 100, &quot;Red&quot;, null
		)
	)
)</formula>
        <label>Tower Velocity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tower_Velocity_Value__c</fullName>
        <inlineHelpText>Good: 0 - 59,99 mm/s
Warning: 60 - 99,99 mm/s
Alarm: 100 mm/s
Range &lt;= 0,1 - 10 Hz</inlineHelpText>
        <label>Tower Velocity Value</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turbine_MR_Report_ID__c</fullName>
        <description>For Monthly reprots</description>
        <formula>&quot;[TurbineInfo]00OD0000005wozP?pv0=&quot; + Id +
&quot;,00OD0000005wneQ?pv0=&quot; + Id +
&quot;,[BearingDetails]00OD0000005wnzn?pv0=&quot; + Id + &quot;~pv1=Main+Bearing,&quot; +
&quot;[GearboxDetails]00OD0000005wnzn?pv0=&quot; + Id + &quot;~pv1=Gearbox,&quot; +
&quot;[GeneratorDetails]00OD0000005wnzn?pv0=&quot; + Id + &quot;~pv1=Generator,&quot; +

&quot;[GeneralStatus]00OD0000005xAvo?pv0=&quot; + Id + &quot;~pv1=New|In+Progress,&quot; +
&quot;[GeneralStatusNew]00OD0000005xAvo?pv0=&quot; + Id + &quot;~pv1=New,&quot; +
&quot;[GeneralStatusInProg]00OD0000005xAvo?pv0=&quot; + Id + &quot;~pv1=In+Progress,&quot; +

&quot;[GeneralStatusClosed]00OD0000005xAvo?pv0=&quot; + Id + &quot;~pv1=Closed,&quot; +

&quot;[MainBearingCases]00OD0000005xAwN?pv0=&quot; + Id + &quot;~pv1=Main+Bearing,&quot; +
&quot;[GearboxCases]00OD0000005xAwN?pv0=&quot; + Id + &quot;~pv1=Gearbox,&quot; +
&quot;[RotorBladeCases]00OD0000005xAwN?pv0=&quot; + Id + &quot;~pv1=Rotor+%2F+Rotor Blades,&quot; +
&quot;[CouplingCases]00OD0000005xAwN?pv0=&quot; + Id + &quot;~pv1=Coupling,&quot; +
&quot;[GeneratorCases]00OD0000005xAwN?pv0=&quot; + Id + &quot;~pv1=Generator|Converter,&quot; +

&quot;[NewCases]00OD0000005xAwc?pv0=&quot; + Id + &quot;~pv1=New,&quot; +
&quot;[CasesInProgress]00OD0000005xAwc?pv0=&quot; + Id + &quot;~pv1=In+Progress,&quot; +

&quot;[ClosedCases]00OD0000005xAwc?pv0=&quot; + Id + &quot;~pv1=Closed&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turbine MR Report ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turbine_QR_Report_ID__c</fullName>
        <formula>&quot;[TurbineInfo]00OD0000005wozP?pv0=&quot; + Id +
&quot;,00OD0000005wneQ?pv0=&quot; + Id +
&quot;,[BearingDetails]00OD0000005wnzn?pv0=&quot; + Id + &quot;~pv1=Main+Bearing,&quot; +
&quot;[GearboxDetails]00OD0000005wnzn?pv0=&quot; + Id + &quot;~pv1=Gearbox,&quot; +
&quot;[GeneratorDetails]00OD0000005wnzn?pv0=&quot; + Id + &quot;~pv1=Generator,&quot; +

&quot;[GeneralStatus]00OD0000005xCEN?pv0=&quot; + Id + &quot;~pv1=New|In+Progress,&quot; +
&quot;[GeneralStatusNew]00OD0000005xCEN?pv0=&quot; + Id + &quot;~pv1=New,&quot; +
&quot;[GeneralStatusInProg]00OD0000005xCEN?pv0=&quot; + Id + &quot;~pv1=In+Progress,&quot; +

&quot;[GeneralStatusClosed]00OD0000005woAq?pv0=&quot; + Id + &quot;~pv1=Closed,&quot; +

&quot;[MainBearingCases]00OD0000005xCEX?pv0=&quot; + Id + &quot;~pv1=Main+Bearing,&quot; +
&quot;[GearboxCases]00OD0000005xCEX?pv0=&quot; + Id + &quot;~pv1=Gearbox,&quot; +
&quot;[RotorBladeCases]00OD0000005xCEX?pv0=&quot; + Id + &quot;~pv1=Rotor+%2F+Rotor Blades,&quot; +
&quot;[CouplingCases]00OD0000005xCEX?pv0=&quot; + Id + &quot;~pv1=Coupling,&quot; +
&quot;[GeneratorCases]00OD0000005xCEX?pv0=&quot; + Id + &quot;~pv1=Generator|Converter,&quot; +

&quot;[NewCases]00OD0000005xCEm?pv0=&quot; + Id + &quot;~pv1=New,&quot; +
&quot;[CasesInProgress]00OD0000005xCEm?pv0=&quot; + Id + &quot;~pv1=In+Progress,&quot; +

&quot;[ClosedCases]00OD0000005wow6?pv0=&quot; + Id + &quot;~pv1=Closed&quot;</formula>
        <label>Turbine QR Report ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turbine_Report_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;reportId=&quot; +  Turbine_QR_Report_ID__c +
&quot;&amp;lg4=0&quot; + 
&quot;&amp;lg3=0&quot; +
&quot;&amp;QMode=1&quot;</formula>
        <inlineHelpText>&quot;&amp;DefaultPDF=1&quot;</inlineHelpText>
        <label>Turbine Report URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Controler</fullName>
                </value>
                <value>
                    <fullName>Converter</fullName>
                </value>
                <value>
                    <fullName>Coupling</fullName>
                </value>
                <value>
                    <fullName>Gearbox</fullName>
                </value>
                <value>
                    <fullName>Generator</fullName>
                </value>
                <value>
                    <fullName>Machine / Machine part</fullName>
                </value>
                <value>
                    <fullName>Main Bearing</fullName>
                </value>
                <value>
                    <fullName>Motor</fullName>
                </value>
                <value>
                    <fullName>Plant</fullName>
                </value>
                <value>
                    <fullName>Rotor / Rotor Blades</fullName>
                </value>
                <value>
                    <fullName>Tower</fullName>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Windfarm_MR_Report_ID__c</fullName>
        <formula>&quot;[TurbineInfo]00OD0000005wozP?pv0=&quot; + Id +
&quot;,[RouterCasesAll]00OD0000005x6cI?pv0=&quot; + Id + &quot;~pv1=New|In+Progress|Closed&quot; +
&quot;,[RouterCasesNewInProg]00OD0000005x6cI?pv0=&quot; + Id + &quot;~pv1=New|In+Progress&quot; +
&quot;,[RouterCasesNew]00OD0000005x6cI?pv0=&quot; + Id + &quot;~pv1=New&quot; +
&quot;,[RouterCasesInProg]00OD0000005x6cI?pv0=&quot; + Id + &quot;~pv1=In+Progress&quot; +
&quot;,[RouterCasesClosed]00OD0000005xNvv?pv0=&quot; + Id + &quot;~pv1=Closed&quot; +
&quot;,[RoutersList]00OD0000005x6ex?pv0=&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Windfarm MR Report ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>old_Tower_Type__c</fullName>
        <label>OLD Tower Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Contact_CC_Emails_to__c</fullName>
        <formula>Contact__r.ptt_CC_Emails_to__c</formula>
        <label>Contact CC Emails to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Important_information__c</fullName>
        <label>Important information</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Parent_Customer_Asset_Status__c</fullName>
        <formula>TEXT(Parent_Customer_Asset__r.Status__c)</formula>
        <label>Parent Customer Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commissioning</fullName>
                </value>
                <value>
                    <fullName>Event Monitoring</fullName>
                </value>
                <value>
                    <fullName>Re-Commissioning</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Technical_Parameters__c</fullName>
        <formula>Machine_Machine_Component__r.ptt_Technical_Parameters__c</formula>
        <label>Technical Parameters</label>
        <type>Text</type>
    </fields>
    <label>PT - Customer Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Serial_Nurmber__c</columns>
        <columns>Account__c</columns>
        <columns>Evaluation_Internal__c</columns>
        <columns>Evaluation_External__c</columns>
        <columns>Machine_Machine_Component__c</columns>
        <columns>Machine_Type_EN__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Customer_Assets</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Machine_Machine_Component__c</columns>
        <columns>Machine_Type_EN__c</columns>
        <columns>Serial_Nurmber__c</columns>
        <columns>PTAG_Machine_Manufaturer__c</columns>
        <columns>Evaluation_External__c</columns>
        <columns>Evaluation_Internal__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Customer Assets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Assets</pluralLabel>
    <recordTypes>
        <fullName>Component</fullName>
        <active>true</active>
        <description>Describe Component</description>
        <label>Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wind_Farm</fullName>
        <active>true</active>
        <description>Describes Machine park.</description>
        <label>Machine park</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wind_Turbine</fullName>
        <active>true</active>
        <description>Describe Machine train.</description>
        <label>Machine train</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>